Activate native notification widget when clicked

Previously, Chrome OS native notification (NotificationViewMD) doesn't
get activated on click, while ARC notification (ArcNotificationView)
does.
This CL adds NotificationViewMD::EventForwarder, based on the
implementation of ArcNotificationContentView::EventForwarder.

This change is required for two reasons:
- Consistency with ARC notifications
- Future implementation of inline reply notification

TEST=manual
BUG=773618

Change-Id: I728cdfdd45896cf2a317b9d7e41d1a097e58aa4f