ui/message_center/views/notification_view_md.cc
@@ -43,6 +43,7 @@
 #include "ui/views/native_cursor.h"
 #include "ui/views/view_targeter.h"
 #include "ui/views/widget/widget.h"
+#include "ui/views/widget/widget_delegate.h"
 
 namespace message_center {
 
@@ -319,6 +320,23 @@ NotificationButtonMD::CreateInkDropHighlight() const {
 // NotificationViewMD
 // ////////////////////////////////////////////////////////////
 
+class NotificationViewMD::EventForwarder : public ui::EventHandler {
+ public:
+  explicit EventForwarder(NotificationViewMD* owner) : owner_(owner) {}
+  ~EventForwarder() override = default;
+
+ private:
+  // ui::EventHandler
+  void OnEvent(ui::Event* event) override {
+    if (event->type() == ui::ET_MOUSE_PRESSED ||
+        event->type() == ui::ET_GESTURE_TAP) {
+      owner_->Activate();
+    }
+  }
+
+  NotificationViewMD* owner_;
+};
+
 views::View* NotificationViewMD::TargetForRect(views::View* root,
                                                const gfx::Rect& rect) {
   CHECK_EQ(root, this);
@@ -417,9 +435,14 @@ NotificationViewMD::NotificationViewMD(MessageCenterController* controller,
   SetEventTargeter(
       std::unique_ptr<views::ViewTargeter>(new views::ViewTargeter(this)));
   set_notify_enter_exit_on_child(true);
+
+  event_forwarder_ = std::make_unique<EventForwarder>(this);
+  AddPreTargetHandler(event_forwarder_.get());
 }
 
-NotificationViewMD::~NotificationViewMD() {}
+NotificationViewMD::~NotificationViewMD() {
+  RemovePreTargetHandler(event_forwarder_.get());
+}
 
 void NotificationViewMD::Layout() {
   MessageView::Layout();
@@ -895,6 +918,11 @@ void NotificationViewMD::SetExpanded(bool expanded) {
   content_row_->InvalidateLayout();
   if (controller())
     controller()->UpdateNotificationSize(notification_id());
+}
+
+void NotificationViewMD::Activate() {
+  GetWidget()->widget_delegate()->set_can_activate(true);
+  GetWidget()->Activate();
 }
 
 }  // namespace message_center
